--- a/index.html
+++ b/index.html
@@ -73,23 +73,9 @@
                 <div id="todo-toggle-container" class="todo-toggle">
                     <div id="todo-input-container">
                         <input type="text" id="todo-input" placeholder="New Todo" autocomplete="off" data-input-form>
-                        <button type="button" data-save-btn>save</button>
+                        <button type="button" data-save-btn><i class="uil-check"></i></button>
                     </div>
                     <ul class="todo-list" data-list>
-                        <li>
-                            <span>hopia 1</span>
-                                <div class='list-settings'>
-                                    <button type="button">edit</button>
-                                    <button type="button">delete</button>
-                                </div>
-                        </li>
-                        <li>
-                            <span>hopia 2</span>
-                                <div class='list-settings'>
-                                    <button type="button">edit</button>
-                                    <button type="button">delete</button>
-                                </div>
-                        </li>
                     </ul>
                 </div>
             </div>
