--- a/index.html
+++ b/index.html
@@ -33,13 +33,13 @@
         <div id="name-container">
             <label for="name" id="name-label">What is your name?</label>
             <br>
-            <input type="text" name="name" id="name" autocomplete="off">
+            <input type="text" name="name" id="name" autocomplete="off" maxlength="20">
         </div>
     
         <div id="focus-container">
             <label for="focus" id="focus-label">What is your main focus for today?</label>
             <br>
-            <input type="text" name="focus" id="focus" autocomplete="off">
+            <input type="text" name="focus" id="focus" autocomplete="off" maxlength="60">
             <p id="focus-value"></p>
         </div>
     </section>
