added media queries

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./sass/main/styles.css"></link>
     <link rel="stylesheet" href="https://unicons.iconscout.com/release/v4.0.0/css/line.css">
     <title>Momentum App</title>
-    <script src="./scripts/index.js" defer></script>
+    <script src="./scripts/main.js" type="module"></script>
 </head>
 <body>
     
